syntax = "proto3";

option go_package = "github.com/tamararankovic/microservices_demo/common/users";

package users;


import "google/api/annotations.proto";

service UserService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/users/user/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/users/user"
    };
  }
  rpc Authenticate(AuthenticateRequest) returns(AuthenticateResponse) {
    option (google.api.http) = {
      get: "/users/authenticate"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/users/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/users/register"
      body: "*"
    };
  }

}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
}

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    RequestResult requestResult = 1;
    string token = 2;
}
message RegisterRequest {
    string username = 1;
    string password = 2;
    bool isHost = 3;
}

message RegisterResponse {
    RequestResult requestResult = 1;
    string token = 2;
}
message RequestResult {
    int32 code = 1;
    string message = 2;
}
